# ibus-chewing

./: .git-blame-ignore-revs  .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ChangeLog  ChangeLog-1.x  ChangeLog.in  ChangeLog.prev  INSTALL  Makefile.am  Modules  NEWS  README  README.md  RELEASE-NOTES.txt  USER-GUIDE  common.CMakeLists.txt  configure.ac  gcovr.cfg  gio-autocleanups.h.gcov  ibus-anthy.spec.in  ibus-chewing-engine.c.gcov  ibus-chewing-engine.h.gcov  ibus-chewing.spec.in  init.CMakeLists.txt  meson.build  pre-commit  wipe-rebuild.sh  zanata.xml  zanata.xml.in
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
Modules/: CMakeVersion.cmake  CompileEnv.cmake  DateTimeFormat.cmake  ManageString.cmake  ManageVariable.cmake  ManageVersion.cmake  PackRPM.cmake  PackSource.cmake  UseDoxygen.cmake  UseFedpkg.cmake  UseHostingService.cmake  UseUninstall.cmake
SPECS/: RPM-ChangeLog.in  RPM-ChangeLog.prev  RPM-RELEASE-NOTES.template  RPM-RELEASE-NOTES.txt  ibus-chewing.spec.in  project.spec.in
cmake_modules/: BasicMacros.cmake  CompileFlags.cmake  DateFormat.cmake  DateTimeFormat.cmake  Developer.cmake  DeveloperOnly.cmake  FedoraDeveloper.cmake  GConf.cmake  Gettext.cmake  ManageVariable.cmake  ManageVersion.cmake  PackRPM.cmake  PackSource.cmake  RPM.cmake  SourceTarball.cmake  SupportCmake-2.4.cmake  UseDoxygen.cmake  UseFedpkg.cmake  UseGConf.cmake  UseGettext.cmake  UseHostingService.cmake  UseKojiFedora.cmake  UseUninstall.cmake  Version.cmake  pkgUpdaterGoogle.pl  updatePackageGoogle.pl
data/: chewing.xml.in  ibus-setup-chewing.desktop  ibus-setup-chewing.desktop.in
engine/: .gitignore  Makefile.am  anthy.engine  anthy.engine.in  chewing.engine.in  chewing.i  engine.py  factory.py  ibus-engine-anthy.in  ibus-engine-chewing.in  main.py  tables.py  test.py
icons/: Makefile.am
po/: CMakeLists.txt  LINGUAS  POTFILES  POTFILES.in  ca.po  cs.po  de.po  de_DE.po  el.po  es.po  es_ES.po  fr.po  fr_BE.po  fr_FR.po  ibus-chewing.pot  ibus-setup-chewing.pot  it.po  it_CH.po  it_IT.po  ja.po  ja_JP.po  ka.po  kab.po  ko.po  ko_KR.po  meson.build  pa.po  pl.po  pt_BR.po  tr.po  uk.po  uk_UA.po  update-pot.sh  zanata.xml  zanata.xml.in  zh_CN.po  zh_TW.po
rpm/: CMakeLists.txt  RPM-ChangeLog.prev  project.spec.in
src/: CMakeLists.txt  GConf2Backend.c  GConf2Backend.h  GSettingsBackend.c  GSettingsBackend.h  IBusChewingApplier.c  IBusChewingBuffer.c  IBusChewingBuffer.h  IBusChewingConfig.c  IBusChewingConfig.h  IBusChewingDialog.gob  IBusChewingEngine-def.c  IBusChewingEngine-gui.c  IBusChewingEngine-input-events.c  IBusChewingEngine-keys.c  IBusChewingEngine-signal.c  IBusChewingEngine-util.c  IBusChewingEngine.gob  IBusChewingLookupTable.c  IBusChewingLookupTable.h  IBusChewingPreEdit-private.h  IBusChewingPreEdit.c  IBusChewingPreEdit.h  IBusChewingProperties.c  IBusChewingProperties.h  IBusChewingSystray.c  IBusChewingSystray.h  IBusChewingUtil.c  IBusChewingUtil.h  IBusConfigBackend.c  IBusConfigBackend.h  MakerDialog-def.c  MakerDialog.gob  MakerDialogBackend.c  MakerDialogBackend.h  MakerDialogProperty.c  MakerDialogProperty.h  MakerDialogPropertySpec.h  MakerDialogUtil.c  MakerDialogUtil.h  (+24 more)
src/setup/: ibus-setup-chewing-about.c  ibus-setup-chewing-about.h  ibus-setup-chewing-application.c  ibus-setup-chewing-application.h  ibus-setup-chewing-window.c  ibus-setup-chewing-window.h  ibus-setup-chewing-window.ui  ibus-setup-chewing.gresource.xml  main.c  meson.build  org.freedesktop.IBus.Chewing.gschema.xml
test/: CMakeLists.txt  IBusChewingPreEdit-test.c  IBusChewingUtil-test.c  MakerDialogBackend-test.c  MakerDialogUtil-test.c  ibus-chewing-engine-test.c  ibus-chewing-preedit-test.c  ibus-chewing-util-test.c  maker-dialog-util-test.c  meson.build  test-util.h
